--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
     "name": "angular-input-modified",
     "description": "AngularJS module to detect and indicate input modifications",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "main": "src/angular-input-modified.js",
     "dependencies": {
-        "angular": "1.2.16"
+        "angular": "~1.2.26"
     },
     "devDependencies": {
     }
