--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-gh-pages": "~0",
     "gulp-rename": "~1",
     "gulp-uglify": "~0",
-    "gulp-util": "~2"
+    "gulp-util": "~2",
+    "gulp-connect": "~2.2.0"
   }
 }
