--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp": "~3",
     "gulp-debug": "~1",
     "gulp-gh-pages": "~0",
+    "gulp-ng-annotate": "^0.5.2",
     "gulp-rename": "~1",
     "gulp-uglify": "~0",
     "gulp-util": "~2",
