--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "devDependencies": {
     "del": "~0",
     "gulp": "~3",
+    "gulp-angular-protractor": "0.0.2",
     "gulp-debug": "~1",
     "gulp-gh-pages": "~0",
     "gulp-ng-annotate": "^0.5.2",
     "gulp-rename": "~1",
     "gulp-uglify": "~0",
     "gulp-util": "~2",
+    "run-sequence": "^1.0.2",
     "spa-server": "^0.1.0"
   }
 }
