--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "del": "~0",
     "gulp": "~3",
     "gulp-angular-protractor": "0.0.2",
+    "gulp-concat": "^2.5.2",
     "gulp-debug": "~1",
     "gulp-gh-pages": "~0",
     "gulp-ng-annotate": "^0.5.2",
