--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "angular": "^1.3.15",
+    "angular-mocks": "^1.3.15",
     "del": "~0",
     "gulp": "~3",
     "gulp-angular-protractor": "0.0.2",
@@ -10,6 +12,12 @@
     "gulp-rename": "~1",
     "gulp-uglify": "~0",
     "gulp-util": "~2",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-expect": "^1.1.0",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-mocha": "^0.1.10",
+    "mocha": "^2.2.4",
     "run-sequence": "^1.0.2",
     "spa-server": "^0.1.0"
   }
