--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "angular-input-modified",
-    "description": "AngularJS module to detect and indicate input modifications",
-    "version": "1.2.0",
+    "description": "Angular.js module to detect and indicate input modifications",
+    "version": "2.0.4",
     "main": "src/angular-input-modified.js",
     "dependencies": {
         "angular": "~1"
