--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "angular-input-modified",
+  "description": "Angular.js module to detect and indicate input modifications",
+  "version": "2.2.2",
+  "homepage": "https://github.com/betsol/angular-input-modified",
+  "license": "MIT",
+  "main": "dist/angular-input-modified.js",
   "devDependencies": {
     "del": "~0",
     "gulp": "~3",
