--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-debug": "~1",
     "gulp-gh-pages": "~0",
+    "gulp-header": "^1.7.1",
     "gulp-ng-annotate": "^0.5.2",
     "gulp-rename": "~1",
     "gulp-uglify": "~0",
