--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.3.1",
   "homepage": "https://github.com/betsol/angular-input-modified",
   "license": "MIT",
-  "main": "dist/angular-input-modified.js",
+  "main": "index.js",
   "devDependencies": {
     "del": "~0",
     "gulp": "~3",
