--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "del": "~0",
     "gulp": "~3",
     "gulp-angular-protractor": "0.0.2",
-    "gulp-callback": "0.0.3",
     "gulp-concat": "^2.5.2",
     "gulp-debug": "~1",
     "gulp-gh-pages": "~0",
+    "gulp-header": "^1.7.1",
+    "gulp-jshint": "^2.0.0",
     "gulp-ng-annotate": "^0.5.2",
     "gulp-rename": "~1",
     "gulp-uglify": "~0",
     "gulp-util": "~2",
+    "jshint": "^2.9.1",
     "ncp": "^2.0.0",
     "run-sequence": "^1.0.2",
     "spa-server": "^0.1.0"
