--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "angular-input-modified",
-  "description": "Angular.js module to detect and indicate input modifications",
-  "version": "2.3.3",
+  "description": "Angular module to detect and indicate input modifications",
+  "version": "2.3.4",
   "homepage": "https://github.com/betsol/angular-input-modified",
   "license": "MIT",
   "main": "index.js",
+  "dependencies": {
+    "angular": "~1"
+  },
   "devDependencies": {
     "del": "~0",
     "gulp": "~3",
