--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "dependencies": {
     "angular": "~1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/betsol/angular-input-modified.git"
+  },
   "devDependencies": {
     "del": "~0",
     "gulp": "~3",
